--- a/main.html
+++ b/main.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>CSS Box Model Demo</title>
 </head>
 <body>
 
   <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px;">
-    This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+    This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
   </div>
 
 </body>
